fix swagger specs
